--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
-baseURL: 'https://minimal-marketing.pages.dev'
-title: 'Minimal Marketing'
+baseURL: 'https://inpactive.github.io'
+title: 'Inpactive'
 languageCode: en-us
 DefaultContentLanguage: en
 enableEmoji: true
@@ -13,8 +13,9 @@ params:
   author:
   author_image: /images/defaults/author.jpg
   og_image: /images/defaults/featured_image.jpg
-  moto: "Learn marketing at a minimal cost."
-  description: "This website costs only $10/year to host. Which leaves you plenty of room to experiment with your time without burning cash on marketing."
+  moto: "we build products that"
+  moto_bigword: "INSPIRE"
+  description: "Amet amet eget scelerisque tellus sit neque faucibus non eleifend. Integer eu praesent at a. Ornare arcu gravida natoque erat et cursus tortor consequat at. Vulputate gravida sociis enim nullam ultricies habitant malesuada lorem ac. Tincidunt urna dui pellentesque sagittis."
   google_analytics_id: '' # @NOTE: To remove the G2A tag, juste leave this key to an empty string.
   cta:
     text: Book a meeting
